--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -7,23 +7,21 @@ on:
       - .gitignore
       - README.md
       - LICENSE
+  schedule:
+      - cron: '0 0 * * *'
 
 jobs:
-  continuous-delivery:
-
+  github-pages:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0  # for posts's lastmod
-
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3.0
           bundler-cache: true
-
       - name: Deploy
         run: bash tools/deploy.sh
